<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/drawer_view"
    tools:context=".UpdateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140sp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="104dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Account Update"
            android:textColor="#CBA85B"
            android:textSize="30sp"
            android:fontFamily="@font/bangers"/>

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#CBA85B"
            android:id="@+id/uploadImg"
            android:layout_gravity="center"
            android:text="Upload Image?"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:id="@+id/updateName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:id="@+id/updatePhone"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:inputType="phone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:id="@+id/updatePassword"
            android:textColor="#8A8585"
            android:textColorHint="#8A8585"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <FrameLayout
                android:id="@+id/updateFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoImg">

                <ImageButton
                    android:id="@+id/sendRequestButton"
                    android:layout_width="175dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_theaters_24"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:text="Update"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>